# normal_integration_continuous_components

./: .gitmodules  README.md  pyproject.toml  requirements.txt
example_data/BlenderProc/: README.md
example_data/BlenderProc/depth_gt/: bedroom_gt.mat
example_data/BlenderProc/normals/bedroom/: K.txt
example_data/BlenderProc/normals/living_room/: K.txt
example_data/BlenderProc/pmsData/bedroomPNG/: Normal_gt.mat
example_data/DSINE/: README.md
example_data/DSINE/normals/seafloor/: K.txt
example_data/DSINE/normals/wedding_cake/: K.txt
example_data/DSINE/pmsData/wedding_cakePNG/: Normal_gt.mat
normal_integration_continuous_components/: main.py
normal_integration_continuous_components/data_structures/: component_decomposition.py
normal_integration_continuous_components/datasets/: custom.py
normal_integration_continuous_components/utils/: io.py  logging.py  processing.py
