[project]
name = "normal_integration_continuous_components"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "joblib~=1.5.2",
    "matplotlib~=3.9.0",
    "numpy~=1.25.2",
    "opencv-python~=4.10.0",
    "pyvista~=0.44.2",
    "scipy~=1.13.1",
    "trimesh~=4.5.3",
    "tqdm~=4.66.4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["normal_integration_continuous_components*"]